log
Thu 11 May 2023 04:54:57 PM UTC: 
 tests:  0|4
total_score: 0/70
b8a3bb1
Thu 11 May 2023 05:00:17 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
f5c716a
Thu 11 May 2023 05:07:37 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:33:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   33 |   if(pq->size == 0) return NULL;
      |                            ^~~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
heap.c:35:23: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   35 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd86e70
Thu 11 May 2023 05:08:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:33:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   33 |   if(pq->size == 0) return NULL;
      |                            ^~~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
heap.c:35:26: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   35 |   return pq->heapArray[0].data;
      |          ~~~~~~~~~~~~~~~~^~~~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
48a5fff
